[tool.poetry]
name = "pianopy"
version = "0.0.2"
description = "A python library/application to play, compose and interface with virtual and real pianos using MIDI."
license = "MIT"
authors = ["PeterPyPan <PeterPyPanGitHub@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/PeterPyPan/pianopy"
repository = "https://github.com/python-poetry/poetry"
keywords = ["piano", "music", "game"]

[tool.poetry.scripts]
pianopy = 'pianopy.__main__:main'

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.1.2"
numpy = "^1.24.1"
python-rtmidi = "^1.4.9"
mingus = "^0.6.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.21.0"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
skip-string-normalization = true
target_version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
      \..*  # exclude directories starting with a `.` from getting formatted
  )/
)
'''

[tool.isort]
known_local_folder = 'pianopy'
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.pytest.ini_options]
testpaths = ["src/tests"]
addopts = ["--doctest-modules"]

[tool.flake8]
max-line-length = 88
max-complexity = 18
extend-ignore = ['E203', 'W503']
per-file-ignores = []
select = ['A0','B0','C4','D2','D3','D400','D403','D405','D406','E','F','N400','N8','Q0','RST','W']
count = true